# esd_web_gui

./: .gitignore  Cargo.toml  README.md  webgui.db  webgui_config.toml
css/: login.css  menu.css
database/: grain.toml  users.toml
html/: grain.hbs  grain_calculate.hbs  grain_load_images.hbs  grain_outline_images.hbs  header.hbs  icecascade.hbs  landlab.hbs  login.hbs  logout.hbs  menu.hbs  menu_coupled.hbs  menu_grain.hbs  menu_pecube.hbs  pecube.hbs
js/: grain_outline.js  grain_refresh.js
src/: configuration.rs  database.rs  error.rs  login.rs  logout.rs  main.rs  menu.rs  menu_grain.rs  menu_icecascade.rs  program_types.rs  programs.rs  util.rs
src/coupled/: menu_coupled.rs  mod.rs
src/grain/: mod.rs
src/icecascade/: mod.rs
src/landlab/: menu_landlab.rs  mod.rs
src/pecube/: menu_pecube.rs  mod.rs
src/programs/: coupled.rs  grain.rs  icecascade.rs  landlab.rs  mod.rs  pecube.rs
