[package]
name = "web_gui"
version = "0.1.0"
authors = ["Willi Kappler <willi.kappler@uni-tuebingen.de>"]

[dependencies]
rouille = "2.1"
handlebars = "0.32"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
rust-argon2 = "0.3.0"
failure = "0.1.1"
log = "0.4"
log4rs = "0.8"
toml = "0.4"
image = "0.19.0"
